@@ -326,14 +326,6 @@ typedef bool_t (*xdrproc_t) __P ((XDR *, __ptr_t, ...));
 #endif /* HAVE_MNTENT_H */
 
 /*
- * Actions to take if <sys/errno.h> exists.
- */
-#ifdef HAVE_SYS_ERRNO_H
-# include <sys/errno.h>
-extern int errno;
-#endif /* HAVE_SYS_ERRNO_H */
-
-/*
  * Actions to take if <sys/fsid.h> exists.
  */
 #ifdef HAVE_SYS_FSID_H
@@ -937,6 +929,14 @@ struct sockaddr_dl;
  */
 #ifdef HAVE_ERRNO_H
 # include <errno.h>
+#else
+/*
+ * Actions to take if <sys/errno.h> exists.
+ */
+# ifdef HAVE_SYS_ERRNO_H
+#  include <sys/errno.h>
+extern int errno;
+# endif /* HAVE_SYS_ERRNO_H */
 #endif /* HAVE_ERRNO_H */
 
 /*
